tests/compile/derive-enum.stderr
error: merge::Merge can only be derived for structs
 --> tests/compile/derive-enum.rs:3:10
  |
3 | #[derive(Merge)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Merge` (in Nightly builds, run with -Z macro-backtrace for more info)
